--- a/camera/project/app/templates/base.html
+++ b/camera/project/app/templates/base.html
@@ -21,7 +21,7 @@
 </div>
 <footer class="fixed-bottom bg-dark text-light">
     <div class="container">
-        (C) Ryoma Fujiwara, Mizumoto Kyosuke, Rancher JP, 2019
+        (C) Ryoma Fujiwara, Kyohei Mizumoto, Rancher JP, 2019
     </div>
 </footer>
 </body>
